--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://use.typekit.net/szo0exi.css");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -12221,6 +12222,13 @@ body {
 .mobile-navigation ul li a:hover {
   color: var(--bs-primary);
 }
+.mobile-navigation ul .current-menu-item a {
+  width: 100%;
+  height: 100%;
+  letter-spacing: 0px;
+  color: var(--bs-primary);
+  text-decoration: none;
+}
 .mobile-navigation .offcanvas {
   background-color: var(--bs-dark-green);
   color: var(--bs-lighter-text);
@@ -12936,6 +12944,9 @@ body {
   box-shadow: none;
   margin: 10px 2px 10px 0;
 }
+.shop-container .row .shop-sidebar-container .shop-sidebar-content ul.products li.product a {
+  width: 50%;
+}
 .shop-container .row .shop-sidebar-container .shop-sidebar-content .woocommerce-loop-category__title {
   display: flex;
   text-align: center;
@@ -12955,12 +12966,19 @@ body {
 .shop-container .row .shop-content-container {
   padding: 0 30px;
 }
+.shop-container .row .shop-content-container ul.products li.product .added {
+  color: var(--bs-tertiary-background);
+  border-color: var(--bs-tertiary-background);
+}
+.shop-container .row .shop-content-container ul.products li.product .added_to_cart {
+  font-size: 18px;
+}
 .shop-container .row .shop-filter-search-container {
   width: 100%;
   margin-bottom: 30px;
 }
 .shop-container .row .shop-filter-search-container .shop-search .aws-container {
-  width: 60%;
+  width: 75%;
 }
 .shop-container .wp-block-woocommerce-cart {
   width: 100%;
@@ -13437,6 +13455,25 @@ body {
   .about-philosophy-component .tiles-row .card-group .tile-light .card-body h3, .about-philosophy-component .tiles-row .card-group .tile-light .card-body .h3 {
     font-size: 27px;
   }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content ul.products li.product a {
+    width: 80%;
+  }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary {
+    font-size: 15px;
+  }
+  .shop-container .row .products li.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .shop-container .row .products li.product .button {
+    margin: 15px 0;
+  }
+  .shop-container .row .products li.product .added_to_cart {
+    margin: 0 0 15px 0;
+    padding: 0;
+    font-size: 20px;
+  }
 }
 @media (max-width: 991.98px) {
   .header .image-container {
@@ -13487,6 +13524,18 @@ body {
   }
   .tertiary-block-component .tertiary-block-container {
     width: 100%;
+  }
+  .shop-container .row {
+    flex-direction: column-reverse;
+  }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content ul.products li.product a {
+    width: 50%;
+  }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content .btn-primary {
+    font-size: 17px;
+  }
+  .shop-container .row .shop-filter-search-container .shop-search .aws-container {
+    width: 60%;
   }
 }
 @media (max-width: 767.98px) {
@@ -13555,6 +13604,9 @@ body {
   .tertiary-block-component .tertiary-block-container .tertiary-block-text-container h2, .tertiary-block-component .tertiary-block-container .tertiary-block-text-container .h2 {
     font-size: 36px;
   }
+  .shop-container .row .shop-filter-search-container .shop-search .aws-container {
+    width: 75%;
+  }
 }
 @media (max-width: 550px) {
   .header .image-container {
@@ -13606,6 +13658,15 @@ body {
   .tertiary-block-component .tertiary-block-container .tertiary-block-text-container h2, .tertiary-block-component .tertiary-block-container .tertiary-block-text-container .h2 {
     font-size: 32px;
   }
+  .shop-container .row {
+    padding: 0;
+  }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content ul.products li.product a {
+    width: 60%;
+  }
+  .shop-container .row .shop-filter-search-container .shop-search .aws-container {
+    width: 90%;
+  }
 }
 @media (max-width: 450px) {
   .header .image-container {
@@ -13619,11 +13680,12 @@ body {
     width: 100%;
   }
   .big-hero-component .big-hero-buttons-container .btn-primary {
-    font-size: 13px;
-    padding: 10px 15px;
+    font-size: 12px;
+    padding: 10px 5px;
   }
   .big-hero-component .big-hero-buttons-container .btn-link {
     font-size: 14px;
+    padding: 6px 4px;
   }
   .shop-introduction-component .shop-introduction-container h2, .shop-introduction-component .shop-introduction-container .h2 {
     font-size: 30px;
@@ -13678,5 +13740,14 @@ body {
   }
   .tertiary-block-component .tertiary-block-container .tertiary-block-text-container h2, .tertiary-block-component .tertiary-block-container .tertiary-block-text-container .h2 {
     font-size: 24px;
+  }
+  .shop-container .row .shop-sidebar-container .shop-sidebar-content ul.products li.product a {
+    width: 80%;
+  }
+  .shop-container .row .shop-filter-search-container .shop-search .aws-container {
+    width: 100%;
+  }
+  .shop-container .row .products li.product .button {
+    font-size: 13px;
   }
 }
