--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,7 @@ $custom-colors: (
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
 @import "./bootstrap/scss/bootstrap";
+@import url("https://use.typekit.net/szo0exi.css");
 
 // Then add additional custom code here
 
@@ -236,6 +237,16 @@ body {
                 &:hover {
                     color: var(--bs-primary);
                 }
+            }
+        }
+
+        .current-menu-item {
+            a {
+                width: 100%;
+                height: 100%;
+                letter-spacing: 0px;
+                color: var(--bs-primary);
+                text-decoration: none;
             }
         }
     }
@@ -1125,6 +1136,10 @@ body {
                     background-color: var(--bs-primary-background);
                     box-shadow: none;
                     margin: 10px 2px 10px 0;
+
+                    a {
+                        width: 50%;
+                    }
                 }
 
                 .woocommerce-loop-category__title{
@@ -1150,6 +1165,18 @@ body {
 
         .shop-content-container {
             padding: 0 30px;
+
+            ul.products li.product {
+
+                .added {
+                    color: var(--bs-tertiary-background);
+                    border-color: var(--bs-tertiary-background);
+                }
+
+                .added_to_cart {
+                    font-size: 18px;
+                }
+            }
         }
 
         .shop-filter-search-container {
@@ -1158,7 +1185,7 @@ body {
 
             .shop-search {
                 .aws-container {
-                    width: 60%;
+                    width: 75%;
                 }
             }
         }
@@ -1784,6 +1811,40 @@ body {
             }
         }
     }
+
+    .shop-container .row {
+        .shop-sidebar-container {
+            .shop-sidebar-content {
+                ul.products li.product {
+                    a {
+                        width: 80%;
+                    }
+                }
+
+                .btn-primary {
+                    font-size: 15px;
+                }
+            }
+        }
+
+        .products {
+            li.product {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .button {
+                    margin: 15px 0;
+                }
+
+                .added_to_cart {
+                    margin: 0 0 15px 0;
+                    padding: 0;
+                    font-size: 20px;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 991.98px) {
@@ -1880,6 +1941,28 @@ body {
     .tertiary-block-component {
         .tertiary-block-container {
             width: 100%;
+        }
+    }
+
+    .shop-container .row {
+        flex-direction: column-reverse;
+
+        .shop-sidebar-container {
+            .shop-sidebar-content {
+                ul.products li.product {
+                    a {
+                        width: 50%;
+                    }
+                }
+
+                .btn-primary {
+                    font-size: 17px;
+                }
+            }
+        }
+
+        .shop-filter-search-container .shop-search .aws-container {
+            width: 60%;
         }
     }
 }
@@ -2000,6 +2083,13 @@ body {
             }
         }
     }
+
+    .shop-container .row {
+
+        .shop-filter-search-container .shop-search .aws-container {
+            width: 75%;
+        }
+    }
 }
 
 @media (max-width: 550px) {
@@ -2105,6 +2195,24 @@ body {
             }
         }
     }
+
+    .shop-container .row {
+        padding: 0;
+
+        .shop-sidebar-container {
+            .shop-sidebar-content {
+                ul.products li.product {
+                    a {
+                        width: 60%;
+                    }
+                }
+            }
+        }
+
+        .shop-filter-search-container .shop-search .aws-container {
+            width: 90%;
+        }
+    }
 }
 
 @media (max-width: 450px) {
@@ -2127,12 +2235,13 @@ body {
 
         .big-hero-buttons-container {
             .btn-primary {
-                font-size: 13px;
-                padding: 10px 15px;
+                font-size: 12px;
+                padding: 10px 5px;
             }
 
             .btn-link {
                 font-size: 14px;
+                padding: 6px 4px;
             }
         }
     }
@@ -2242,6 +2351,30 @@ body {
         .tertiary-block-container .tertiary-block-text-container {
             h2 {
                 font-size: 24px;
+            }
+        }
+    }
+
+    .shop-container .row {
+        .shop-sidebar-container {
+            .shop-sidebar-content {
+                ul.products li.product {
+                    a {
+                        width: 80%;
+                    }
+                }
+            }
+        }
+
+        .shop-filter-search-container .shop-search .aws-container {
+            width: 100%;
+        }
+
+        .products {
+            li.product {
+                .button {
+                    font-size: 13px;
+                }
             }
         }
     }
