Working on responsivness 6

--- a/css/main.css
+++ b/css/main.css
@@ -13007,6 +13007,9 @@ body {
 .shop-container .wp-block-woocommerce-cart .wp-block-woocommerce-empty-cart-block .wc-block-grid {
   display: none;
 }
+.shop-container .wc-block-components-combobox .wc-block-components-combobox-control input.components-combobox-control__input, .shop-container .wc-block-components-form .wc-block-components-combobox .wc-block-components-combobox-control input.components-combobox-control__input {
+  border-radius: 0;
+}
 .shop-container .wp-block-woocommerce-checkout .wc-block-components-text-input input {
   border-radius: 0;
 }
@@ -13411,6 +13414,35 @@ body {
   margin-bottom: 25px;
 }
 
+/****************** TERMS AND CODITIONS ******************/
+.terms-component {
+  background-color: var(--bs-primary-background);
+  padding: 60px 0 0 0;
+}
+.terms-component .row {
+  padding: 30px 0;
+}
+.terms-component .row h1, .terms-component .row .h1 {
+  color: var(--bs-darker-text);
+  width: 75%;
+}
+.terms-component .row ol {
+  padding: 0 0 1.5em 3em;
+  margin: 0;
+  font-weight: bold;
+}
+.terms-component .row ol li {
+  font-size: 18px;
+}
+.terms-component .row ol ul {
+  margin: 0;
+}
+.terms-component .row ol ul li {
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
 /****************** RESPONSIVNESS ******************/
 @media (max-width: 1199.98px) {
   .header .image-container {
@@ -13561,6 +13593,9 @@ body {
   .shop-container .row .shop-filter-search-container .shop-search .aws-container {
     width: 60%;
   }
+  #checkout .shop-sidebar-container {
+    margin-top: 25px;
+  }
   .custom-cake-form-header-component .custom-cake-form-header-text-container {
     width: 100%;
   }
@@ -13693,6 +13728,10 @@ body {
   .contact-map-component .contact-map-text-container {
     width: 100%;
   }
+  .terms-component .row h1, .terms-component .row .h1 {
+    width: 100%;
+    font-size: 38px;
+  }
 }
 @media (max-width: 550px) {
   .header .image-container {
@@ -13770,6 +13809,15 @@ body {
   }
   .contact-map-component .contact-map-text-container .contact-map-text h3, .contact-map-component .contact-map-text-container .contact-map-text .h3 {
     font-size: 27px;
+  }
+  .terms-component .row p {
+    font-size: 16px;
+  }
+  .terms-component .row ol li {
+    font-size: 16px;
+  }
+  .terms-component .row ol ul li {
+    font-size: 16px;
   }
 }
 @media (max-width: 450px) {
@@ -13854,6 +13902,9 @@ body {
   .shop-container .row .products li.product .button {
     font-size: 13px;
   }
+  .single-product-container h2, .single-product-container .h2 {
+    font-size: 28px;
+  }
   .custom-cake-form-header-component {
     margin: 0;
   }
@@ -13877,5 +13928,8 @@ body {
   }
   .contact-map-component .contact-map-text-container .contact-map-text h3, .contact-map-component .contact-map-text-container .contact-map-text .h3 {
     font-size: 25px;
+  }
+  .terms-component .row h1, .terms-component .row .h1 {
+    font-size: 32px;
   }
 }
